<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/wizard_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="40sp"
            app:layout_constraintTop_toBottomOf="@id/wizard_image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lang_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/select_language"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/title" />
        <!--    <androidx.appcompat.widget.AppCompatTextView-->
        <!--        android:id="@+id/lang_title"-->
        <!--        app:layout_constraintTop_toBottomOf="@id/title"-->
        <!--        android:layout_marginTop="30dp"-->
        <!--        android:gravity="center"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:textSize="@dimen/wizard_title"-->
        <!--        android:text="@string/select_language"/>-->
        <LinearLayout
            android:id="@+id/wizard_lang_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lang_title">

            <RadioGroup
                android:id="@+id/wizard_lang_r1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/wizard_lang_eng"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/language_selector"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/english" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/wizard_lang_ama"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/language_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/amharic" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/wizard_lang_r2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/wizard_lang_oro"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/language_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/oromifa" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/wizard_lang_tig"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/language_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/tigrigna" />

            </RadioGroup>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/wizard_next"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wizard_lang_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>