<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/wizard_profile_pic"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/wizard_profile_pic">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Health information"
                android:textSize="25dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/wizard_weight"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/abc_vector_test"
                android:drawableLeft="@drawable/abc_vector_test"
                android:drawablePadding="10dp"
                android:hint="@string/weight_kg" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/wizard_height"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/ic_baseline_height_24"
                android:drawableLeft="@drawable/ic_baseline_height_24"
                android:drawablePadding="10dp"
                android:hint="Height (CM)" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_baseline_local_hospital_24" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/wizard_blood"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:textSize="18sp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/wizard_birth"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                app:drawableTint="#E65100"
                android:drawablePadding="10dp"
                android:hint="@string/birthday" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/wizard_allergy"
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/ic_baseline_notes_24"
                android:drawableLeft="@drawable/ic_baseline_notes_24"
                android:drawablePadding="10dp"
                android:hint="@string/allergy" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/wizard_next"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_bg"
                android:text="@string/next"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>