<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/wizard_profile_pic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_contacts_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/wizard_profile_pic">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency_contacts"
                android:textSize="25dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/wizard_fullname"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/full_name" />

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/wizard_phone"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_baseline_local_phone_24"
                    android:drawableLeft="@drawable/ic_baseline_local_phone_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/phone_number" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/wizard_pick_contact"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_baseline_contact_phone_24"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_baseline_people_24" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/wizard_relation"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:textSize="18sp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add new"
                android:textColor="@color/colorPrimary"
                app:drawableLeftCompat="@drawable/ic_baseline_add_24"
                app:drawableTint="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/wizard_next"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_bg"
                android:text="@string/next"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>